--- a/assets/gpl.html
+++ b/assets/gpl.html
@@ -7,8 +7,10 @@
 
 <h1>GameBoid &ndash; GameBoy emulator for Android</h1>
 
-Copyright (c) 2009 Notaz
-Copyright (c) 2012 GameBoid developers
+<p>Copyright (c) 2006-2012 Exophase
+<p>Copyright (c) 2007 ZodTTD
+<p>Copyright (c) 2009-2012 Notaz
+<p>Copyright (c) 2012 GameBoid developers
 
 <h2>License</h2>
 
