--- a/assets/faq.html
+++ b/assets/faq.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+<h1>Frequently Asked Questions</h1>
+
 <ul>
 <li/><a href="#q1">How do I get games (aka. ROMs)?</a>
 <li/><a href="#q2">Can I download games directly from my phone?</a>
