--- a/assets/gpl.html
+++ b/assets/gpl.html
@@ -5,12 +5,12 @@
 </head>
 <body>
 
-<h1>GameBoid &ndash; GameBoy emulator for Android</h1>
+<h1>GameBoid &ndash; GameBoy&trade; emulator for Android&trade;</h1>
 
-<p>Copyright (c) 2006-2012 Exophase
-<p>Copyright (c) 2007 ZodTTD
-<p>Copyright (c) 2009-2012 Notaz
-<p>Copyright (c) 2012 GameBoid developers
+<p>Copyright &copy; 2006-2012 Exophase
+<p>Copyright &copy; 2007 ZodTTD
+<p>Copyright &copy; 2009-2012 Notaz
+<p>Copyright &copy; 2012 GameBoid&nbsp;developers
 
 <h2>License</h2>
 
