More improvements to documentation

--- a/assets/gpl.html
+++ b/assets/gpl.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>GameBoid &ndash; GameBoy&trade; emulator for Android&trade;</h1>
+<h1>GameBoid &ndash; Game&nbsp;Boy&trade; emulator for Android&trade;</h1>
 
 <p>Copyright &copy; 2006-2012 Exophase
 <p>Copyright &copy; 2007 ZodTTD
@@ -14,22 +14,34 @@
 
 <h2>License</h2>
 
-GameBoid is free software, licensed under the GNU General Public License version 3 or later
-(herein referred to as GPL). You are welcome to use and redistribute it under license's
+GameBoid is free software, licensed under the <a href="#gpl">GNU General Public License version 3
+or later</a> (herein referred to as GPL). You are welcome to use and redistribute it under license's
 conditions.
 
 <p>
 
 This program comes with ABSOLUTELY NO WARRANTY; for details see below.
 
-<h2>Sources</h2>
+<h2>Legal notice</h2>
 Source code for all published versions of GameBoid, complying with terms of GPL, can be obtained from
 project Git repository &ndash; <a href="http://gameboid.sf.net/code">http://gameboid.sf.net/code</a>.
-Some versions of GameBoid were released without source code published. For source code of those
-versions contact people in charge of distributing those binaries. Developer of this version heeds no
-responsibility for copyright violations by other parties.
+Some versions of GameBoid were released without the source code published. For source code of those
+versions contact people in charge of distributing corresponding binaries. Developer of this version
+heeds no responsibility for copyright violations by other parties.
 
-<hr>
+<p>
+
+GameBoid is NOT affiliated with, nor authorized, endorsed or licensed in any way by Nintendo Corporation,
+its affiliates or subsidiaries. <i>Game Boy</i> is registered trademark of Nintendo Corporation.
+<i>Android</i> is a trademark of Google Inc. All trademarks are property of their respective holders.
+
+<p>
+
+GameBoid does not include any Game Boy game software. We do not warrant compatibility with any games.
+As a matter of fact, there may be defects in certain games, including, but not limited to, audio and
+video flaws, which may affect how the games play.
+
+<a id="gpl"></a><hr>
 
 <h3 style="text-align: center;">GNU GENERAL PUBLIC LICENSE</h3>
 <p style="text-align: center;">Version 3, 29 June 2007</p>
